Bug 345185 - Style page of diagram property dialog always shows white background color
Summary: Style page of diagram property dialog always shows white background color
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.15.95 (KDE Applications 15.03.95)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-15 17:48 UTC by Ralf Habacker
Modified: 2015-04-17 21:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.95 (KDE Applications 15.03.95)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-03-15 17:48:26 UTC
The style page of the diagram property dialog always shows white background color regardless of the choosen color. 

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. open diagram property dialog  and select style page
3. select a different background color and press okay
4. reopen diagram property dialog and select style page


Actual Results:  
The background color always as white

Expected Results:  
The currently visible background color should be shown in the style page.


This bug is visible after bug 345127 has been fixed.
Comment 1 Ralf Habacker 2015-03-16 18:49:17 UTC
Git commit d69a710a8091a56f53fa809b5df8a4ab3ef96d96 by Ralf Habacker.
Committed on 15/03/2015 at 21:13.
Pushed by habacker into branch 'Applications/15.04'.

Fix bug not showing correct scene background color in scene dialog.

The bug is fixed by:
- cleanup UMLScene related code in class UMLWidgetStylePage
- fix background and grid color setting in class UMLScene
FIXED-IN:2.15.95 (KDE 15.03.95)

M  +31   -22   umbrello/dialogs/pages/umlwidgetstylepage.cpp
M  +3    -0    umbrello/dialogs/pages/umlwidgetstylepage.h
M  +1    -9    umbrello/dialogs/umlviewdialog.cpp
M  +4    -4    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/d69a710a8091a56f53fa809b5df8a4ab3ef96d96