Fix bug not showing correct scene background color in scene dialog.

The bug is fixed by:
- cleanup UMLScene related code in class UMLWidgetStylePage
- fix background and grid color setting in class UMLScene

BUG:345185
FIXED-IN:2.15.95 (KDE 15.03.95)